feat(*): add main page and navbar

--- a/views/algo/cryptotable.hbs
+++ b/views/algo/cryptotable.hbs
@@ -12,6 +12,20 @@
     <div class="container">
         <div class="navbar-header">
             <a href="../" class="navbar-brand">Криптография</a>
+            <ul class="nav navbar-nav">
+                <li class="active" class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Вычисления онлайн<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/cryptotable">Вычисление вероятности атаки имитации и атаки подмены по таблице шифрования</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Задачи<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/tasks1">Задачи на вероятность атаки имитации и атаки подмены</a></li>
+                    </ul>
+                </li>
+            </ul>
             <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
